# AgoraX

./: README.md  README_DEPLOY.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__  __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  auth.py  meetings.py  quorum.py  rules.py  votes.py
backend/app/core/: __init__.py  config.py  db.py  security.py  segurity.py
backend/app/models/: __init__.py  agenda_item.py  audit.py  condominium.py  meeting.py  owner.py  presence.py  user.py  vote.py
backend/app/schemas/: __nit__.py  audit_schema.py  meeting_schema.py  quorum_schema.py  user_schema.py  vote_schema.py
backend/app/services/: __init__.py  audit_service.py  quorum_service.py  rule_engine.py
db/: init.sql
frontend/: Dockerfile  index.html  package.json  package.son  vite.config.js
frontend/src/: App.vue  main.js  style.css
frontend/src/components/: Admin.vue  Dashboard.vue  Login.vue  Register.vue  Results.vue  VotingPanel.vue
gateway/: DockerFile  sever.js
